--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>วีระพล</noscript>
+    <noscript>วีระพล จาระนัย</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
